# Project_

./: file  pyproject.toml  setup 2.py  setup.py  test
Code/: Dockerfile  classes.py  main.py  requirements.txt  sort.py  user_interface.py
Personal_Assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
