[tool.poetry]
name = "personal-assistant"
version = "0.1.0"
description = "Data and File Assistant"
authors = ["Lamantini <lamantiniuso@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
